Do RTL tabstrip transforms before animating tabs.

BUG=672873
TEST=as in bug

Review-Url: https://codereview.chromium.org/2680203004
Cr-Commit-Position: refs/heads/master@{#449199}

Former-commit-id: d1065b766d40d754475f9270eea5ed3ce295e81b